--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,7 @@
 {
   "image": "mcr.microsoft.com/devcontainers/universal:2",
   "features": {
-  "sshd": "latest"
-}
+    "sshd": "latest",
+    "ghcr.io/devcontainers/features/github-cli:1": {}
+  }
 }
